--- a/resources/config.yml
+++ b/resources/config.yml
@@ -37,10 +37,10 @@
 
 
 # Set the plugin here!
-command-mode: console
+command-mode: player
 join-first-time: false
 commands-on-close:
-- "say Selamat Bermain!"
+- "coords on"
 Mode: SimpleForm
 title: "§l§eOSFORCE NETWORK S6"
 content: "§e=======§b[ §aWELCOME §b]§e=======\n\n§r§fSelamat Datang Di Server §l§eOSFORCE NETWORK§r\nKamu Berada Di Zone: §eLobby§f\nJangan lupa ajak §eTeman§f kalian untuk bermain di server ini!\nJangan lupa patuhi rules yang ada di §e(/info rules)§f !!\nIngin membeli rank? Chat: §e+62 813-8647-0421\n\n§fSelamat Bermain §e!!!"
@@ -49,7 +49,7 @@ Buttons:
   - name: "§aLet's Go"
     image: "textures/ui/confirm"
     commands:
-    - "say §fSelamat Bermain!"
+    - "coords on"
   ModalForm:
     B1:
       name: Button1
